--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'npm'
+          cache: 'pnpm' # Zmieniono na 'pnpm' z 'npm'
       - name: Install dependencies
-        run: npm install
+        run: pnpm install # Zmieniono na 'pnpm install' z 'npm install'
       - name: Build
-        run: npm run build
+        run: pnpm run build # Zmieniono na 'pnpm run build' z 'npm run build'
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
