--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.10.0",
     "firebase": "^9.19.1",
+    "focus-trap-react": "^11.0.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
